--- a/Project1/community-board/src/components/Card.css
+++ b/Project1/community-board/src/components/Card.css
@@ -8,9 +8,19 @@
   box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
 }
 
+.card-image {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 15px;
+}
+
 .join-button {
   padding: 8px 12px;
-  background-color: #28a745;
+  background-color: purple;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -19,5 +29,5 @@
 }
 
 .join-button:hover {
-  background-color: #218838;
+  background-color: rgb(205, 140, 205);
 }
